--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <div class="content-menu">
                 <ul class="content-items">
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blunk">
+                        <a href="#" class="content-link content__link" target="_blank">
                             Лента новостей
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link target=" _blunk">
+                        <a href="#" class="content-link content__link" target="_blank">
                             Интервью
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blunk">
+                        <a href="#" class="content-link content__link" target="_blank">
                             Мнения
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blunk">
+                        <a href="#" class="content-link content__link" target="_blank">
                             Графики
                         </a>
                     </li>
