--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <div class="content-menu">
                 <ul class="content-items">
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blank">
+                        <a href="#" class="content-link content__link">
                             Лента новостей
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blank">
+                        <a href="#" class="content-link content__link">
                             Интервью
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blank">
+                        <a href="#" class="content-link content__link">
                             Мнения
                         </a>
                     </li>
                     <li class="content-item">
-                        <a href="#" class="content-link content__link" target="_blank">
+                        <a href="#" class="content-link content__link">
                             Графики
                         </a>
                     </li>
@@ -129,10 +129,10 @@
             <a href="#" class="content-info-link">
                 <h2 class="content-info-title">
                     В Японии изобрели вакцину от старения
-                    </h>
-                    <p class="content-info-data">
-                        30 января 2022, 11:01
-                    </p>
+                </h2>
+                <p class="content-info-date">
+                    30 января 2022, 11:01
+                </p>
             </a>
         </div>
         <div class="content-info">
@@ -140,7 +140,7 @@
                 <h2 class="content-info-title">
                     В России создадут сеть центров для работы с трудными подростками
                 </h2>
-                <p class="content-info-data">
+                <p class="content-info-date">
                     30 января 2022, 09:56
                 </p>
             </a>
@@ -150,7 +150,7 @@
                 <h2 class="content-info-title">
                     Специалист рассказал, зачем нужно на ночь отключать мобильный интернет
                 </h2>
-                <p class="content-info-data">
+                <p class="content-info-date">
                     30 января 2022, 09:13
                 </p>
             </a>
